# opennuts-gmk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
examples/: widget.opennuts
include/gmk/: arena.hpp  pool.hpp  result.hpp  units.hpp  version.hpp
include/gmk/brep/: body.hpp  ids.hpp  primitives.hpp  topology.hpp  validate.hpp
include/gmk/geom/: analytic_curves.hpp  analytic_surfaces.hpp  curve.hpp  nurbs_curve.hpp  nurbs_surface.hpp  surface.hpp
include/gmk/lang/: ast.hpp  eval.hpp  lexer.hpp  parser.hpp  token.hpp
include/gmk/math/: aabb.hpp  transform.hpp  vec.hpp
include/gmk/ops/: boolean.hpp
include/gmk/server/: geom_server.hpp  json.hpp  jsonrpc.hpp  lsp_server.hpp
include/gmk/tess/: tessellator.hpp
src/brep/: body.cpp  primitives.cpp  validate.cpp
src/cli/: main.cpp
src/geom/: analytic_curves.cpp  analytic_surfaces.cpp  nurbs_curve.cpp  nurbs_surface.cpp
src/lang/: eval.cpp  lexer.cpp  parser.cpp
src/math/: transform.cpp
src/ops/: boolean.cpp
src/server/: geom_server.cpp  json.cpp  jsonrpc.cpp  lsp_server.cpp
src/tess/: tessellator.cpp
tests/: test_brep.cpp  test_json.cpp  test_lang.cpp  test_main.cpp  test_main.hpp  test_math.cpp  test_nurbs.cpp  test_units.cpp
wasm/: entry.cpp
